policies/connectivity/WorkloadClusterIpJob.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "[[ .Release.Name ]]-prepare-cm-preinstall-hook"
  namespace: "[[ $.Release.Namespace ]]"
spec:
  podSelector:
    matchLabels:
      batch.kubernetes.io/job-name: "[[ .Release.Name ]]-prepare-cm-preinstall-hook"
  policyTypes:
  - Egress
  egress:
  - {}
---
[[- end ]]
