policies/connectivity/CertManagerRoute53SecretSync.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: sync-cert-manager-route53-secret
  annotations:
    policies.kyverno.io/title: Sync cert-manager Route53 Secret
    policies.kyverno.io/category: Connectivity
    policies.kyverno.io/severity: Medium
    policies.kyverno.io/description: >-
      This policy synchronizes the cert-manager Route53 secret from the source namespace to the target namespace.
spec:
  rules:
  - name: sync-cert-manager-route53-secret
    match:
      any:
      - resources:
          kinds:
          - Namespace
          names:
          - "[[ .Values.certManager.targetNamespace ]]"
    generate:
      apiVersion: v1
      kind: Secret
      name: "[[ .Values.cluster.name ]]-cert-manager-user-secrets"
      namespace: [[`"[[request.object.metadata.name]]"`]]
      synchronize: true
      clone:
        namespace: "[[ .Values.certManager.sourceNamespace ]]"
        name: "[[ .Values.cluster.name ]]-cert-manager-user-secrets"
[[- end ]]
