policies/connectivity/Pod.yaml
[[- if .Values.proxy.enabled ]]
[[- $proxy := deepCopy .Values.cluster.proxy | mustMerge .Values.proxy ]]
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: inject-proxy-env
spec:
  rules:
    - name: inject-proxy-env-to-containers
      match:
        resources:
          kinds:
            - Pod
[[- if $proxy.namespaces ]]
          namespaces:
          [[- range $proxy.namespaces ]]
            - [[ . | quote ]]
          [[- end ]]
[[- end ]]
      context:
        - name: kubeadmConfig
          configMap:
            name: kubeadm-config
            namespace: kube-system
        - name: clusterConfiguration
          variable:
            value: [[`"[[ kubeadmConfig.data.ClusterConfiguration | parse_yaml(@) ]]"`]]
        - name: apiEndpoint
          variable:
            value: [[`"[[ clusterConfiguration.controlPlaneEndpoint | split(@, ':') | [0] ]]"`]]
        - name: dnsDomain
          variable:
            value: [[`"[[ clusterConfiguration.networking.dnsDomain ]]"`]]
        - name: podSubnet
          variable:
            value: [[`"[[ clusterConfiguration.networking.podSubnet ]]"`]]
        - name: serviceSubnet
          variable:
            value: [[`"[[ clusterConfiguration.networking.serviceSubnet ]]"`]]
        - name: dynamicNoProxy
          variable:
            value: [[`"[[apiEndpoint]],[[dnsDomain]],[[podSubnet]],[[serviceSubnet]]"`]]
        - name: fullNoProxy
          variable:
            value: [[ printf "\"%s,%s,%s\"" $proxy.noProxy "svc,127.0.0.1,localhost" "[[dynamicNoProxy]]" ]]
      mutate:
        patchStrategicMerge:
          spec:
            containers:
              - (name): "*"
                env:
                  [[- if $proxy.http ]]
                  - name: HTTP_PROXY
                    value: [[ $proxy.http ]]
                  - name: http_proxy
                    value: [[ $proxy.http ]]
                  [[- end ]]
                  [[- if $proxy.https ]]
                  - name: HTTPS_PROXY
                    value: [[ $proxy.https ]]
                  - name: https_proxy
                    value: [[ $proxy.https ]]
                  [[- end ]]
                  [[- if $proxy.noProxy ]]
                  - name: NO_PROXY
                    value: [[`"[[ fullNoProxy ]]"`]]
                  - name: no_proxy
                    value: [[`"[[ fullNoProxy ]]"`]]
                  [[- end ]]
            initContainers:
              - (name): "*"
                env:
                  [[- if $proxy.http ]]
                  - name: HTTP_PROXY
                    value: [[ $proxy.http ]]
                  - name: http_proxy
                    value: [[ $proxy.http ]]
                  [[- end ]]
                  [[- if $proxy.https ]]
                  - name: HTTPS_PROXY
                    value: [[ $proxy.https ]]
                  - name: https_proxy
                    value: [[ $proxy.https ]]
                  [[- end ]]
                  [[- if $proxy.noProxy ]]
                  - name: NO_PROXY
                    value: [[`"[[ fullNoProxy ]]"`]]
                  - name: no_proxy
                    value: [[`"[[ fullNoProxy ]]"`]]
                  [[- end ]]
            ephemeralContainers:
              - (name): "*"
                env:
                  [[- if $proxy.http ]]
                  - name: HTTP_PROXY
                    value: [[ $proxy.http ]]
                  - name: http_proxy
                    value: [[ $proxy.http ]]
                  [[- end ]]
                  [[- if $proxy.https ]]
                  - name: HTTPS_PROXY
                    value: [[ $proxy.https ]]
                  - name: https_proxy
                    value: [[ $proxy.https ]]
                  [[- end ]]
                  [[- if $proxy.noProxy ]]
                  - name: NO_PROXY
                    value: [[`"[[ fullNoProxy ]]"`]]
                  - name: no_proxy
                    value: [[`"[[ fullNoProxy ]]"`]]
                  [[- end ]]
[[- end ]]
