policies/connectivity/PodControllerProxy.yaml
[[- if and .Values.proxy.enabled (not .Values.cel.enabled) ]]
[[- $proxy := deepCopy .Values.cluster.proxy | mustMerge .Values.proxy ]]
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: inject-proxy-env
  annotations:
    policies.kyverno.io/title: Inject Proxy Environment Variables
    policies.kyverno.io/category: Connectivity
    policies.kyverno.io/severity: Medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      This policy injects proxy environment variables into all containers of a pod.
spec:
  validationFailureAction: Enforce
  rules:
    - name: inject-proxy-env-to-containers
      exclude:
        any:
        - resources:
            kinds:
            - Pod
            names:
            [[- range .Values.exclude.names ]]
            - [[ . | quote ]]
            [[- end ]]
        - resources:
            kinds:
            - Pod
            annotations:
              policies.kyverno.io/inject-proxy-env: exclude
      match:
        all:
        - resources:
            kinds:
            - Pod
[[- if $proxy.namespaces ]]
            namespaces:
            [[- range $proxy.namespaces ]]
              - [[ . | quote ]]
            [[- end ]]
[[- end ]]
      context:
        - name: kubeadmConfig
          configMap:
            name: kubeadm-config
            namespace: kube-system
        - name: clusterConfiguration
          variable:
            value: [[`"[[ kubeadmConfig.data.ClusterConfiguration | parse_yaml(@) ]]"`]]
        - name: apiEndpoint
          variable:
            value: [[`"[[ clusterConfiguration.controlPlaneEndpoint | split(@, ':') | [0] ]]"`]]
        - name: dnsDomain
          variable:
            value: [[`"[[ clusterConfiguration.networking.dnsDomain ]]"`]]
        - name: dnsDomainRoot
          variable:
            value: [[`"[[ clusterConfiguration.networking.dnsDomain ]]."`]]
        - name: podSubnet
          variable:
            value: [[`"[[ clusterConfiguration.networking.podSubnet ]]"`]]
        - name: serviceSubnet
          variable:
            value: [[`"[[ clusterConfiguration.networking.serviceSubnet ]]"`]]
        - name: dynamicNoProxy
          variable:
            value: [[`"[[apiEndpoint]],[[dnsDomain]],[[dnsDomainRoot]],[[podSubnet]],[[serviceSubnet]]"`]]
        - name: fullNoProxy
          variable:
            value: [[ printf "\"%s,%s,%s\"" $proxy.noProxy "svc,127.0.0.1,localhost" "[[dynamicNoProxy]]" ]]
      mutate:
        patchStrategicMerge:
          spec:
            containers:
              - (name): "*"
                env:
                  [[- if $proxy.http ]]
                  - name: HTTP_PROXY
                    value: [[ $proxy.http ]]
                  - name: http_proxy
                    value: [[ $proxy.http ]]
                  [[- end ]]
                  [[- if $proxy.https ]]
                  - name: HTTPS_PROXY
                    value: [[ $proxy.https ]]
                  - name: https_proxy
                    value: [[ $proxy.https ]]
                  [[- end ]]
                  [[- if $proxy.noProxy ]]
                  - name: NO_PROXY
                    value: [[`"[[ fullNoProxy ]]"`]]
                  - name: no_proxy
                    value: [[`"[[ fullNoProxy ]]"`]]
                  [[- end ]]
            initContainers:
              - (name): "*"
                env:
                  [[- if $proxy.http ]]
                  - name: HTTP_PROXY
                    value: [[ $proxy.http ]]
                  - name: http_proxy
                    value: [[ $proxy.http ]]
                  [[- end ]]
                  [[- if $proxy.https ]]
                  - name: HTTPS_PROXY
                    value: [[ $proxy.https ]]
                  - name: https_proxy
                    value: [[ $proxy.https ]]
                  [[- end ]]
                  [[- if $proxy.noProxy ]]
                  - name: NO_PROXY
                    value: [[`"[[ fullNoProxy ]]"`]]
                  - name: no_proxy
                    value: [[`"[[ fullNoProxy ]]"`]]
                  [[- end ]]
            ephemeralContainers:
              - (name): "*"
                env:
                  [[- if $proxy.http ]]
                  - name: HTTP_PROXY
                    value: [[ $proxy.http ]]
                  - name: http_proxy
                    value: [[ $proxy.http ]]
                  [[- end ]]
                  [[- if $proxy.https ]]
                  - name: HTTPS_PROXY
                    value: [[ $proxy.https ]]
                  - name: https_proxy
                    value: [[ $proxy.https ]]
                  [[- end ]]
                  [[- if $proxy.noProxy ]]
                  - name: NO_PROXY
                    value: [[`"[[ fullNoProxy ]]"`]]
                  - name: no_proxy
                    value: [[`"[[ fullNoProxy ]]"`]]
                  [[- end ]]
---
[[- end ]]
